2012-09-19  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_api.php: Added functions: event_info
	and create_event.

2012-09-18  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_config.php: Fixed bug in netflow
	setup.

2012-09-18  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_api.php: Added new
	functions to API.

2012-09-18 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js,
	godmode/alerts/alert_list.builder.php,
	godmode/alerts/alert_list.list.php,
	godmode/gis_maps/configure_gis_map.php,
	include/functions_visual_map_editor.php, include/functions_ui.php,
	operation/tree.php, operation/agentes/exportdata.excel.php,
	operation/agentes/exportdata.php, operation/agentes/ver_agente.php,
	operation/snmpconsole/snmp_view.php, operation/users/user_edit.php,
	operation/gis_maps/ajax.php, operation/events/events_validate.php,
	operation/messages/message_edit.php,
	operation/messages/message_list.php,
	operation/reporting/reporting_viewer.php,
	operation/netflow/nf_live_view.php,
	operation/incidents/incident.php, operation/search_modules.php:
	started to use the new function "ui_print_agent_autocomplete_input"
	to make more easy (and standar) the autocomplete agent input.

2012-09-18  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql: Added inverse critical and warning intervals to
	  the Oracle and PostgreSQL database schemas.

2012-09-18  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_api.php: Fixed bug creating
	new agent.

2012-09-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_flot.php
	include/graphs/flot/pandora.flot.js
	operation/agentes/stat_win.php  
	include/functions_modules.php: Added unknown status
	to graphs and improve some little aesthetic things of
	flot graphs

	* include/functions.php
	include/functions_html.php: Fixed html checkbox issue
	with get_parameter_checkbox function
